--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "npx babel api --out-dir dist",
     "start": "node dist/index.js",
-    "test": "mocha tests/**/*.test.js --require @babel/register",
+    "pretest": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate && NODE_ENV=test sequelize db:seed:all",
+    "test": "NODE_ENV=test mocha tests/**/*.test.js --require @babel/register,@babel/polyfill --exit",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "lint": "eslint api --fix",
     "dev": "nodemon --exec babel-node api/index.js"
   },
   "repository": {
@@ -23,9 +26,13 @@
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
     "@babel/node": "^7.7.4",
+    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.7.4",
     "@babel/register": "^7.7.4",
     "chai": "^4.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "mocha": "^6.2.2",
     "sequelize-cli": "^5.5.1"
   },
