--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,4 +9,6 @@ globals:
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
-rules: {}
+rules:
+  import/no-unresolved: off
+  import/extensions: off
