--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.7.4",
     "@babel/register": "^7.7.4",
+    "babel-plugin-root-import": "^6.4.1",
     "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
