--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "npx babel api --out-dir dist",
     "start": "node dist/index.js",
-    "pretest": "NODE_ENV=test sequelize db:migrate:undo:all && NODE_ENV=test sequelize db:migrate && NODE_ENV=test sequelize db:seed:all",
-    "test": "NODE_ENV=test mocha tests/**/*.test.js --require @babel/register,@babel/polyfill --exit",
-    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all",
+    "pretest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all && cross-env NODE_ENV=test sequelize db:migrate && cross-env NODE_ENV=test sequelize db:seed:all",
+    "test": "cross-env NODE_ENV=test mocha tests/**/*.test.js --require @babel/register,@babel/polyfill --exit",
+    "posttest": "cross-env NODE_ENV=test sequelize db:migrate:undo:all",
     "lint": "eslint api tests --fix",
     "dev": "nodemon --exec babel-node api/index.js"
   },
@@ -23,18 +23,19 @@
   },
   "homepage": "https://github.com/chidioguejiofor/ojumo-bend#readme",
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
-    "@babel/core": "^7.7.4",
-    "@babel/node": "^7.7.4",
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/register": "^7.7.4",
-    "babel-plugin-root-import": "^6.4.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/node": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "babel-plugin-root-import": "^6.5.0",
     "chai": "^4.2.0",
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.20.1",
-    "mocha": "^6.2.2",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^6.2.3",
     "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
@@ -43,10 +44,14 @@
     "chai-http": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-validator": "^6.3.0",
+    "express-validator": "^6.4.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^7.14.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemon": "^2.0.3",
+    "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.7",
+    "sinon": "^9.0.2"
   }
 }
